# DTEAM-django-practical-test

./: .dockerignore  .env-example  .flake8  .gitignore  Dockerfile  README.md  deployment.md  docker-compose.yml  pyproject.toml
CVProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
audit/: admin.py  constants.py  middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: recent_requests.html
main/: admin.py  context_processors.py  models.py  openai_utils.py  prompts.py  serializers.py  tasks.py  tests.py  tests_api.py  urls.py  views.py
main/data/: initial_cv.json
main/migrations/: 0001_initial.py
main/templates/: settings.html
main/templates/main/: cv_detail.html  cv_list.html  cv_pdf.html
